--- a/pom.xml
+++ b/pom.xml
@@ -3,14 +3,14 @@
 	<parent>
 		<groupId>org.jenkins-ci.plugins</groupId>
 		<artifactId>plugin</artifactId>
-		<version>1.466</version>
+		<version>1.509.3</version>
 		<!-- which version of Hudson is this plugin built against? -->
 		<relativePath />
 	</parent>
 
 	<artifactId>extended-choice-parameter</artifactId>
 	<packaging>hpi</packaging>
-	<version>0.30-custom-jenkins-1.509.4-SP4</version>
+	<version>0.30-custom-jenkins-1.509.4-SP4-1</version>
 	<name>Extended Choice Parameter Plug-In</name>
 	<url>http://wiki.jenkins-ci.org/display/JENKINS/Extended+Choice+Parameter+plugin</url>
 
